mType/tests/testFiles/typeChecking/error/namespaceReturnTypesMismatch.mt
namespace math {
    function calculate(): int {
        return 42;
    }
}

string wrongType = math::calculate();  // Should fail